<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lib_push_to_refresh_pull_label">上拉刷新…</string>
    <string name="lib_pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="lib_pull_to_refresh_release_label">放开以刷新…</string>
    <string name="lib_pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/lib_pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/lib_pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/lib_pull_to_refresh_refreshing_label</string>
    <string name="app_name">9块9包邮</string>
    <string name="app_error">此App属于盗版App，请到360等平台下载正版App</string>
    <string name="str_use_test_host">使用的是测试服务器</string>
    <string name="net_error">网络异常,请检查您的网络</string>
    <string name="update_force_title_text">强制更新</string>
    <string name="update_force_dialog_no">退出应用</string>
    <string name="update_dialog_yes">立即更新</string>
    <string name="update_dialog_no">下次再说</string>
    <string name="update_title_text">更新提示</string>
    <string name="click_to_loading_more">点击加载更多</string>
    <string name="str_today_goods">今日新品</string>
    <string name="str_hot_sell">超值热销</string>
    <string name="str_nine_nine">9块9</string>
    <string name="str_nineteen_nine">19块9</string>
    <string name="str_twentynine_nine">29块9</string>
    <string name="str_thirtynine_nine">39块9</string>
    <string name="str_chaozhi">精品街</string>
    <string name="str_personal_center">个人中心</string>
    <string name="str_loading">玩命加载中，请稍后...</string>
    <string name="str_free_shipping">包邮</string>
    <string name="str_share">分享</string>
    <string name="str_qq_account">QQ账号</string>
    <string name="str_qq_account_had_login">QQ账号(已登录)</string>
    <string name="str_taobao_account">淘宝账号</string>
    <string name="str_my_taobao">我的淘宝</string>
    <string name="str_reg_account">没有淘宝账号?点这里注册一个</string>
    <string name="str_buy_record">购买记录</string>
    <string name="str_shopping_car">购物车</string>
    <string name="str_check_logistics">查物流</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_setting">设置</string>
    <string name="str_follow_mode_notice">2G/3G网络下自动帮您省流量</string>
    <string name="str_follow_mode_notice_detail">开启后，在2G/3G网络下，自动切换到小图模式;在wifi网络下，切换到大图模式</string>
    <string name="str_shopping_guide">使用帮助</string>
    <string name="str_share_app">分享应用给好友</string>
    <string name="str_check_update">检查更新(当前版本 v%s)</string>
    <string name="str_check_updating">检查更新中...</string>
    <string name="str_in_lastest_version">当前已是最新版</string>
    <string name="str_clear_cache">清理缓存(%s)</string>
    <string name="str_clear_cache_checking">清理缓存(检测中...)</string>
    <string name="str_clear_cache_clearing">清理缓存(清理中...)</string>
    <string name="str_clearing">清理中...</string>
    <string name="str_clear_finish">清理完成</string>
    <string name="str_feedback">意见反馈</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_input_contact">请留下您的联系方式，方便我们联系您解决问题</string>
    <string name="str_hint_take_you_adv">请留下您的宝贵意见，谢谢(200字以内)</string>
    <string name="str_hint_email_qq">QQ或者邮箱</string>
    <string name="str_login">登录</string>
    <string name="str_logout">登出</string>
    <string name="str_submit">提交</string>
    <string name="str_confirm">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_kefu_qq">客服QQ： %s</string>
    <string name="str_connect_us">商务合作和商家报名QQ：88888888888</string>
    <string name="str_company_name">郭大爷网络科技有限公司 版权所有</string>
    <string name="str_copyright_info">Copyright © 2013 - 2015 www.ladgift.com.</string>
    <string name="str_all_right">All Rights Reserved</string>
    <string name="str_empty_warnning">亲，写点东西再提交吧</string>
    <string name="str_mobile_taobao">手机淘宝</string>
    <string name="str_upload_success">上传成功</string>
    <string name="str_upload_thanks">亲，非常感谢您!您的宝贵建议，就是我们前进的动力，祝您天天好心情哦</string>
    <string name="str_upload_failed">上传失败</string>
    <string name="str_exit_confirm">确定要退出%s?</string>
    <string name="str_exit_content">亲，我们每天推荐最超值的包邮宝贝，明天记得来看哦~~</string>
    <string name="str_exit_yes">确定退出</string>
    <string name="str_exit_no">继续逛</string>
    <string name="str_share_content">这个才卖%s,真便宜，推荐你也来看看~~O(∩_∩)O~~</string>
    <string name="str_share_type">选择分享方式</string>
    <string name="str_share_qq_friend">QQ好友</string>
    <string name="str_share_qzone">QQ空间</string>
    <string name="str_share_sinaweibo">新浪微博</string>
    <string name="str_share_weixin_friend">微信好友</string>
    <string name="str_share_weixin_circle">微信朋友圈</string>
    <string name="str_share_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_fail">登录失败</string>
    <string name="str_qq_logout_confirm">温馨提示</string>
    <string name="str_qq_logout_confirm_content">亲~保持登录状态可以方便分享宝贝到QQ空间哦~~您确定要登出QQ吗？</string>
    <string name="str_taobao_logout_confirm_content">亲，您确定要注销当前的淘宝账户吗?保持绑定状态可以方便地购买宝贝以及查询物流哦~~</string>
    <string name="str_back_to_firstpage">宝贝推荐</string>
    <string name="str_share_app_refuse">残忍滴拒绝</string>
    <string name="str_feedback_input_confirm">亲~，您还没有留下联系方式哦，这样我们会无法联系您从而帮助您解决问题哦，请问确定不留下联系方式么？</string>
    <string name="str_feedback_input_no">不留了</string>
    <string name="str_feedback_input_yes">要留的</string>
    <string name="str_feedback_failed_content">亲，不小心失败了呢，检查下网络再试一次吧!</string>
    <string name="str_i_know">知道了</string>
    <string name="str_copy_that">已复制到粘贴板</string>
    <string name="str_reg_taobao_confirm">无淘宝账号?点此注册</string>
    <string name="str_goods_report_error">我要报错</string>
    <string name="str_main_notice_title">亲们请留意啦</string>
    <string name="str_goods_report_title">我要报错</string>
    <string name="str_report_notice">有意见？说两句!!...</string>
    <string name="str_more_suggest">更多建议...</string>
    <string name="str_comment_app_input_no">残忍滴拒绝</string>
    <string name="str_comment_app_input_yes">仁慈滴赐一个</string>
    <string name="str_price_error_wanning">亲~有的宝贝是拍下才改价的哦，您可以在点击购买之后提交订单之前看价格是否改了~~</string>
    <string name="str_save_failed_warning">存储失败，请检查SD卡或手机是否还有剩余空间</string>
    <string name="str_action_failed">操作失败</string>
    <string name="str_goods_detail">宝贝详情</string>
    <string name="str_welcome_app_lable">精品街(jpjie.com)出品</string>
    <string name="str_left_all">全部</string>
    <string name="str_left_yifu">衣服</string>
    <string name="str_left_xiezi">鞋子</string>
    <string name="str_left_baobao">包包</string>
    <string name="str_left_meizhuang">美妆</string>
    <string name="str_left_peishi">配饰</string>
    <string name="str_left_jujia">居家</string>
    <string name="str_left_other">其他</string>
    <string name="str_tb_mid1">正在前往</string>
    <string name="str_tb_mid2">淘宝</string>
    <string name="str_tb_mid3">页面，</string>
    <string name="str_tb_mid21">购买支付都将在</string>
    <string name="str_tb_mid22">淘宝页面</string>
    <string name="str_tb_mid23">进行，</string>
    <string name="str_tb_mid31">祝亲们购物愉快哦~</string>
    <string name="str_tb_btn_action">我知道了</string>
    <string name="str_wx_not_support_circle">不支持朋友圈</string>
    <string name="str_share_waitting">分享中，请稍候...</string>
    <string name="str_share_success">分享成功!</string>
    <string name="str_share_failed">分享失败!</string>


    <string name="str_new">上新</string>
    <string name="str_popularity">人气</string>
    <string name="str_goods_detail_title">手机淘宝</string>
    <string name="str_back">返回</string>
    <string name="str_title">红丫帽九块九</string>
    <string name="str_sorry">对不起</string>
    <string name="str_net_error">网络请求失败</string>
    <string name="str_retry">重试</string>
    <string name="str_new_text">新鲜指数:</string>
    <string name="str_heat_text">人气值:</string>
    <string name="str_from">来自</string>

    <string name="menu_home">首页</string>
    <string name="menu_share">分享</string>
    <string name="menu_hot">热门应用推荐</string>
    <string name="menu_contact">联系我们</string>
    <string name="menu_version">版本更新</string>
    <string name="menu_help">使用帮助</string>
    <string name="str_mobile">手机</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_search">搜索</string>
    <string name="str_search_input_hint">输入商品关键字</string>
    <string name="str_search_input_empty">请输入商品关键字</string>
    <string name="str_history">最近浏览</string>
    <string name="str_no_update">当前版本是最新版本，无需更新!</string>
    <string name="str_update_title">\\软件更新</string>
    <string name="str_update_found">发现新版本，是否更新?</string>
    <string name="str_update_ok">更新</string>
    <string name="str_update_no">取消</string>

</resources>
