<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.genius.totop.fragment.SearchFragment">

    <ListView
        android:id="@+id/listView_goods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@color/transparent"
        android:cacheColorHint="@color/transparent"
        android:divider="@null"
        android:dividerHeight="0.0dip"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true" />

    <tr.xip.errorview.ErrorView
        android:id="@+id/error_view"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:ev_title="@string/str_sorry"
        app:ev_subtitle="@string/str_net_error"
        app:ev_showTitle="true"
        app:ev_showSubtitle="true"
        app:ev_showRetryButton="true"
        app:ev_retryButtonText="@string/str_retry" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:indeterminate="false" />

    <include layout="@layout/include_no_result" />

</RelativeLayout>
