<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_main_head"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/light_red">

            <include
                android:id="@+id/layout_goods_title"
                layout="@layout/goods_list_title_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/layout_category_bar"
            android:layout_height="@dimen/dimen_50"
            android:layout_below="@id/layout_main_head"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:paddingTop="@dimen/main_bottom_line_padding_bottom"
            android:paddingBottom="@dimen/main_bottom_line_padding_bottom"
            android:background="@drawable/ic_item_pic_bg"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_new_goods"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/radio_selector_top"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/str_new"
                android:layout_marginRight="@dimen/dimen_15"
                android:textColor="@drawable/radio_selector_top_text" />

            <RadioButton
                android:id="@+id/radiobutton_hot_goods"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/radio_selector_top"
                android:button="@null"
                android:gravity="center"
                android:text="@string/str_popularity"
                android:textColor="@drawable/radio_selector_top_text"
                android:checked="false" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_bottom_bar"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/main_bottom_line_padding_bottom"
                android:paddingRight="@dimen/main_bottom_line_padding_bottom"
                android:layout_alignParentRight="true"
                android:text="最近浏览"
                android:gravity="center"
                android:textColor="@drawable/radio_selector_bottom_text"
                android:textSize="@dimen/normal_text_size"
                android:background="@drawable/button_selector_history"/>

            <RadioGroup
                android:id="@+id/layout_bottom_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/button_history"
                android:gravity="center"
                android:background="@drawable/ic_tab_radio_group_bg"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_level_one"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.8"
                    android:text="@string/str_nine_nine"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="@drawable/radio_selector_bottom_text"
                    android:textSize="@dimen/normal_text_size"
                    android:background="@drawable/radio_selector_price"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_top_tab_line" />

                <RadioButton
                    android:id="@+id/radio_level_two"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.8"
                    android:text="@string/str_nineteen_nine"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@drawable/radio_selector_bottom_text"
                    android:textSize="@dimen/normal_text_size"
                    android:background="@drawable/radio_selector_price"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_top_tab_line" />

                <RadioButton
                    android:id="@+id/radio_level_three"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.8"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/str_twentynine_nine"
                    android:textColor="@drawable/radio_selector_bottom_text"
                    android:textSize="@dimen/normal_text_size"
                    android:background="@drawable/radio_selector_price"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_top_tab_line" />

                <RadioButton
                    android:id="@+id/radio_level_four"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.8"
                    android:button="@null"
                    android:text="@string/str_thirtynine_nine"
                    android:gravity="center"
                    android:textColor="@drawable/radio_selector_bottom_text"
                    android:textSize="@dimen/normal_text_size"
                    android:background="@drawable/radio_selector_price"/>
            </RadioGroup>
        </RelativeLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/listView_goods"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_category_bar"
            android:layout_above="@id/layout_bottom_bar"
            android:listSelector="@color/transparent"
            android:cacheColorHint="@color/transparent"
            android:divider="@null"
            android:dividerHeight="0.0dip"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:smoothScrollbar="true"
            app:ptrHeaderTextColor="@color/black" />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dip"
            android:src="@drawable/fab_top"
            app:fab_type="mini"
            app:fab_colorNormal="@color/light_red"
            app:fab_colorPressed="@color/light_red_pressed"
            app:fab_colorRipple="@color/light_red"/>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/fab_top"
            android:layout_marginBottom="40dip"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/fab_money"
            app:fab_type="mini"
            app:fab_colorNormal="@color/light_red"
            app:fab_colorPressed="@color/light_red_pressed"
            app:fab_colorRipple="@color/light_red"/>

        <tr.xip.errorview.ErrorView
            android:id="@+id/error_view"
            android:layout_below="@id/layout_category_bar"
            android:layout_above="@id/layout_bottom_bar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:ev_title="@string/str_sorry"
            app:ev_subtitle="@string/str_net_error"
            app:ev_showTitle="true"
            app:ev_showSubtitle="true"
            app:ev_showRetryButton="true"
            app:ev_retryButtonText="@string/str_retry" />

        <include layout="@layout/include_no_result" />
    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:indeterminate="false" />
</RelativeLayout>